--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "hexo": "^3.2.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^0.2.0",
+    
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-search": "^1.0.3",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-prism-plugin": "^1.0.3",
     "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-tag-plantuml": "^1.0.0",
+    "hexo-wordcount": "^2.0.0"
   }
 }
