--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.2.2"
   },
   "dependencies": {
+    "ejs": "^2.5.5",
     "hexo": "^3.2.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^0.2.0",
@@ -21,6 +22,7 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-tag-plantuml": "^1.0.0",
-    "hexo-wordcount": "^2.0.0"
+    "hexo-wordcount": "^2.0.0",
+    "utils-merge": "^1.0.0"
   }
 }
