--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ post_asset_folder: true
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   line_number: false
   auto_detect: false
   tab_replace: 
@@ -101,3 +101,10 @@ toc: true
     
 
 duoshuo_shortname: tanke773
+
+
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'default'
+#  theme: 'okaidia'
+#  theme: 'solarizedlight'
