--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^1.0.3",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-prism-plugin": "^1.0.3",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-marked": "^0.2.10",
