--- a/themes/mat2/_config.yml
+++ b/themes/mat2/_config.yml
@@ -14,7 +14,7 @@ menu:
 
 links:
   - title: "GitHub"
-    url: http://www.github.com/wayou
+    url: http://www.github.com/
     intro: "码农之家"
     icon: "fa fa-github"
 
