--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ avatar: /images/head.png
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://6000miles.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
